# UAM_ROS

./: README.md
src/arm/: CMakeLists.txt  package.xml
src/arm/meshes/: link1.STL  link2.STL  link5.STL  link6.STL  link7.STL
src/arm/urdf/: arm.csv  arm.urdf  virtual_walls.xacro
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: arm.ros2_control.xacro  arm.rviz  arm.srdf  arm.urdf.xacro  chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo.yaml
src/arm_moveit_config/launch/: demo_with_controllers.launch.py
src/arm_realtime_tracker/: CMakeLists.txt  package.xml  publish_pose
src/arm_realtime_tracker/launch/: pose_tracker.launch.py  servo_tracker.launch.py
src/arm_realtime_tracker/scripts/: control_pose.py
src/arm_realtime_tracker/src/: pose_servo_tracker_node.cpp  pose_tracker_node.cpp
src/my_hardware_interface/: CMakeLists.txt  README.md  my_arm_hardware.xml  package.xml
src/my_hardware_interface/bringup/launch/: myarm.launch.py
src/my_hardware_interface/description/launch/: view_robot.launch.py
src/my_hardware_interface/description/ros2_control/: rrbot.ros2_control.xacro
src/my_hardware_interface/description/urdf/: rrbot.urdf.xacro
src/my_hardware_interface/doc/: userdoc.rst
src/my_hardware_interface/hardware/: myarm.cpp
src/my_hardware_interface/hardware/include/my_arm_hardware/: myarm.hpp
src/my_hardware_interface/scripts/: fake_usb.py  how_to_find_usb
